--- a/index.html
+++ b/index.html
@@ -207,6 +207,12 @@
         </div>
     </div>
 
+        <!-- Footer Watermark -->
+    <div class="footer">
+        <p class="footer-text">Made with 💕 by <a href="https://wa.me/6281294483724?text=Hai%20Ryuhuu!%20Aku%20mau%20bikin%20website%20ngeselin%20juga%20dong%20😆" class="footer-link" target="_blank">Ryuhuu</a></p>
+    </div>
+
+
     <script>
         // Membuat hati yang berjatuhan
         const heartsContainer = document.getElementById('hearts');
